# CalendarOptimizer

./: .gitignore  CMakeLists.txt  README.md  a.out  blackout_time.gcno  date.cpp.gcov  date.gcno  event.gcno  main_menu.gcno  scheduler.gcno  task.gcno  todo.gcno  todoTests
header/: UserInterface.hpp  blackout_time.hpp  date.hpp  event.hpp  main_menu.hpp  scheduler.hpp  task.hpp  todo.hpp  userinterface.hpp
src/: UserInterface.cpp  blackout_time.cpp  date.cpp  event.cpp  main.cpp  main_menu.cpp  scheduler.cpp  task.cpp  todo.cpp  userinput.cpp
tests/: todoTest.cpp  userInputTest.cpp
